--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,7 @@ publish = false
 
 [dependencies]
 solana-program = "=1.8.1"
-
-[features]
-test-bpf = []
+thiserror = "1.0.24"
 
 [lib]
 crate-type = ["cdylib", "lib"]
